Fixing yetus check
Change-Id: I8e66c65a5d32e583038ab2e6b75803934e2c0f63